--- a/docs/env-var-deltas/4.0.0-5.0.0-added.md
+++ b/docs/env-var-deltas/4.0.0-5.0.0-added.md
@@ -1,4 +1,4 @@
-# Added Variables between oCIS 4.0.5 and oCIS 5.0.0-rc1
+# Added Variables between oCIS 4.0.0 and oCIS 5.0.0
 
 | File                                          | Variable                                                                                                                                                                                           | Description                                                                                                                                                                                                                                                                                                                                                                                                                                                                 | Default                               |
 |-----------------------------------------------|----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------|-----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------|---------------------------------------|
