[docs-only] Add missing added envvar to list

--- a/docs/services/general-info/env-var-deltas/4.0.0-5.0.0-added.md
+++ b/docs/services/general-info/env-var-deltas/4.0.0-5.0.0-added.md
@@ -5,6 +5,7 @@
 | ocis-pkg/shared/shared_types.go               | `OCIS_CACHE_DISABLE_PERSISTENCE`                                                                                                                                                                   | Disables persistence of the cache. Only applies when store type 'nats-js-kv' is configured.                                                                                                                                                                                                                                                                                                                                                                                 | `false`                               |
 | services/antivirus/pkg/config/config.go       | `OCIS_EVENTS_AUTH_USERNAME`                                                                                                                                                                        | The username to authenticate with the events broker. The events broker is the ocis service which receives and delivers events between the services.                                                                                                                                                                                                                                                                                                                         |                                       |
 |                                               | `OCIS_EVENTS_AUTH_PASSWORD`                                                                                                                                                                        | The password to authenticate with the events broker. The events broker is the ocis service which receives and delivers events between the services.                                                                                                                                                                                                                                                                                                                         |                                       |
+|                                               | `ANTIVIRUS_ICAP_TIMEOUT`                                                                                                                                                                        | Scan timeout for the ICAP client. Defaults to '5m' (5 minutes). See the Environment Variable Types description for more details.                                                                                                                                                                                                                                                                                                                         |                                       |
 | services/audit/pkg/config/config.go           | `OCIS_EVENTS_AUTH_USERNAME`                                                                                                                                                                        | The username to authenticate with the events broker. The events broker is the ocis service which receives and delivers events between the services.                                                                                                                                                                                                                                                                                                                         |                                       |
 |                                               | `OCIS_EVENTS_AUTH_PASSWORD`                                                                                                                                                                        | The password to authenticate with the events broker. The events broker is the ocis service which receives and delivers events between the services.                                                                                                                                                                                                                                                                                                                         |                                       |
 | services/auth-service/pkg/config/config.go    | `OCIS_TRACING_ENABLED;AUTH_SERVICE_TRACING_ENABLED`                                                                                                                                                | Activates tracing.                                                                                                                                                                                                                                                                                                                                                                                                                                                          |                                       |
