--- a/docs/services/general-info/env-var-deltas/4.0.0-5.0.0-removed.adoc
+++ b/docs/services/general-info/env-var-deltas/4.0.0-5.0.0-removed.adoc
@@ -6,7 +6,7 @@
 
 [width="100%",cols="~,~,~,~",options="header"]
 |===
-| File| Variable| Replacement| Description
+| Service| Variable| Replacement| Description
 
 | xref:{s-path}/auth-basic.adoc[auth-basic]
 | `LDAP_BIND_PASSWORD`
