--- a/docs/services/general-info/env-var-deltas/4.0.0-5.0.0-added.adoc
+++ b/docs/services/general-info/env-var-deltas/4.0.0-5.0.0-added.adoc
@@ -18,6 +18,9 @@
 |
 | `OCIS_EVENTS_AUTH_PASSWORD`
 | The password to authenticate with the events broker. The events broker is the ocis service which receives and delivers events between the services.|
+|
+| `ANTIVIRUS_ICAP_TIMEOUT`
+| Scan timeout for the ICAP client. Defaults to '5m' (5 minutes). See the Environment Variable Types description for more details.|
 
 | xref:{s-path}/audit.adoc[audit]
 | `OCIS_EVENTS_AUTH_USERNAME`
