--- a/docs/services/general-info/env-var-deltas/4.0.0-5.0.0-added.md
+++ b/docs/services/general-info/env-var-deltas/4.0.0-5.0.0-added.md
@@ -8,7 +8,7 @@
 |                                               | `MICRO_REGISTRY_AUTH_PASSWORD`                                                                                                                                                                     | Optional when using nats to authenticate with the nats cluster.                                                                                                                                                                                                                                                                                                                         |                                       |
 | services/antivirus/pkg/config/config.go       | `OCIS_EVENTS_AUTH_USERNAME`                                                                                                                                                                        | The username to authenticate with the events broker. The events broker is the ocis service which receives and delivers events between the services.                                                                                                                                                                                                                                                                                                                         |                                       |
 |                                               | `OCIS_EVENTS_AUTH_PASSWORD`                                                                                                                                                                        | The password to authenticate with the events broker. The events broker is the ocis service which receives and delivers events between the services.                                                                                                                                                                                                                                                                                                                         |                                       |
-|                                               | `ANTIVIRUS_ICAP_TIMEOUT`                                                                                                                                                                           | Scan timeout for the ICAP client. Defaults to '5m' (5 minutes). See the Environment Variable Types description for more details.                                                                                                                                                                                                                                                                                                                         |                                       |
+|                                               | `ANTIVIRUS_ICAP_SCAN_TIMEOUT`                                                                                                                                                                           | Scan timeout for the ICAP client. Defaults to '5m' (5 minutes). See the Environment Variable Types description for more details.                                                                                                                                                                                                                                                                                                                         |   5m0s                                    |
 | services/audit/pkg/config/config.go           | `OCIS_EVENTS_AUTH_USERNAME`                                                                                                                                                                        | The username to authenticate with the events broker. The events broker is the ocis service which receives and delivers events between the services.                                                                                                                                                                                                                                                                                                                         |                                       |
 |                                               | `OCIS_EVENTS_AUTH_PASSWORD`                                                                                                                                                                        | The password to authenticate with the events broker. The events broker is the ocis service which receives and delivers events between the services.                                                                                                                                                                                                                                                                                                                         |                                       |
 | services/auth-service/pkg/config/config.go    | `OCIS_TRACING_ENABLED;AUTH_SERVICE_TRACING_ENABLED`                                                                                                                                                | Activates tracing.                                                                                                                                                                                                                                                                                                                                                                                                                                                          |                                       |
@@ -56,7 +56,7 @@
 |                                               | `OCIS_EVENTS_AUTH_PASSWORD;EVENTHISTORY_EVENTS_AUTH_PASSWORD`                                                                                                                                      | The password to authenticate with the events broker. The events broker is the ocis service which receives and delivers events between the services.                                                                                                                                                                                                                                                                                                                         |                                       |
 | services/frontend/pkg/config/config.go        | `OCIS_ENABLE_RESHARING`                                                                                                                                                                            | Changing this value is NOT supported. Enables the support for resharing in the clients.                                                                                                                                                                                                                                                                                                                                                                                     |                                       |
 |                                               | `FRONTEND_DEFAULT_LINK_PERMISSIONS`                                                                                                                                                                | Defines the default permissions a link is being created with. Possible values are 0 (= internal link, for instance members only) and 1 (= public link with viewer permissions). Defaults to 1.                                                                                                                                                                                                                                                                              |                                       |
-|                                               | `FRONTEND_AUTO_ACCEPT_SHARES`                                                                                                                                                                      | Defines if shares should be auto accepted by default. Users can change this setting individually in their profile.                                                                                                                                                                                                                                                                                                                                                          |                                       |
+|                                               | `FRONTEND_AUTO_ACCEPT_SHARES`                                                                                                                                                                      | Defines if shares should be auto accepted by default. Users can change this setting individually in their profile.                                                                                                                                                                                                                                                                                                                                                          | true                                      |
 |                                               | `OCIS_CACHE_DISABLE_PERSISTENCE;FRONTEND_OCS_STAT_CACHE_DISABLE_PERSISTENCE`                                                                                                                       | Disable persistence of the cache. Only applies when using the 'nats-js-kv' store type. Defaults to false.                                                                                                                                                                                                                                                                                                                                                                   | false                                 |
 |                                               | `FRONTEND_OCS_LIST_OCM_SHARES`                                                                                                                                                                     | Include OCM shares when listing shares. See the OCM service documentation for more details.                                                                                                                                                                                                                                                                                                                                                                                 |                                       |
 |                                               | `OCIS_SHARING_PUBLIC_SHARE_MUST_HAVE_PASSWORD;FRONTEND_OCS_PUBLIC_SHARE_MUST_HAVE_PASSWORD`                                                                                                        | Set this to true if you want to enforce passwords on all public shares.                                                                                                                                                                                                                                                                                                                                                                                                     |                                       |
